--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,9 @@ input{
 
 }
 
+a,
 button{
+    text-decoration: none;
     font-family: 'Montserrat',sans-serif;
     appearance: none;
     border: none;
@@ -90,11 +92,12 @@ button{
     
 }
 
+a:hover,
 button:hover{
     background-color: #288686;
     
 }
-
+a:active,
 button:active{
     background-color: #256f46;
 }
